src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>CadenceAssignmentError__c</fullName>
        <label>SequenceAssignmentError</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CadencePerformed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SequencePerformed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cadence_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sequence ID</label>
        <referenceTo>Cadence__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EntranceCriteria_Matched_Date__c</fullName>
        <label>EntranceCriteria Matched Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isActivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ringdna100__Call_Attempts__c</fullName>
        <label>Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Days_Since_Last_Attempt__c</fullName>
        <formula>IF(AND(ISBLANK(ringdna100__Last_Outbound_Call__c), ISBLANK(ringdna100__Last_Email_Attempt__c)), NULL, 
IF(AND(!ISBLANK(ringdna100__Last_Outbound_Call__c), ISBLANK(ringdna100__Last_Email_Attempt__c)), (NOW() - ringdna100__Last_Outbound_Call__c), 
IF(AND(ISBLANK(ringdna100__Last_Outbound_Call__c), !ISBLANK(ringdna100__Last_Email_Attempt__c)), (NOW() - ringdna100__Last_Email_Attempt__c), 
IF(ringdna100__Last_Outbound_Call__c &gt; ringdna100__Last_Email_Attempt__c, (NOW() - ringdna100__Last_Outbound_Call__c), (NOW() - ringdna100__Last_Email_Attempt__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Attempt (Call or Email)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Email_Attempts__c</fullName>
        <label>Email Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__First_Inbound_Call__c</fullName>
        <label>First Inbound Call</label>
        <type>DateTime</type>
    </fields>
	<fields>
        <fullName>Sequence_Type__c</fullName>
		<description>It will return record type.</description>
		<formula>TEXT(Cadence_ID__r.Record_Type__c)</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Sequence Type</label>
		<type>Text</type>
>
    </fields>
	<fields>
		<fullName>Opportunity_Id__c</fullName>
		<label>Opportunity Id</label>
		<length>20</length>
		<type>Text</type>
    </fields>
    <fields>
        <fullName>ringdna100__First_Inbound_Message__c</fullName>
        <label>First Inbound Message</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__First_Outbound_Call__c</fullName>
        <label>First Outbound Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__First_Outbound_Message__c</fullName>
        <label>First Outbound Message</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Last_Email_Attempt__c</fullName>
        <label>Last Email Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Last_Inbound_Call__c</fullName>
        <label>Last Inbound Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Last_Inbound_Message__c</fullName>
        <label>Last Inbound Message</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Last_Outbound_Call__c</fullName>
        <label>Last Outbound Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Last_Outbound_Message__c</fullName>
        <label>Last Outbound Message</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Message_Attempts__c</fullName>
        <label>Message Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Response_Type__c</fullName>
        <label>Response Type</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ringdna100__RingDNA_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RingDNA Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Call_Attempt_Days__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Outbound_Call__c), NULL, (NOW() - ringdna100__Last_Outbound_Call__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Call Attempt (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Call_Attempt_Minutes__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Outbound_Call__c), NULL, (NOW() - ringdna100__Last_Outbound_Call__c) * 1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Call Attempt (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Email_Attempt_Days__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Email_Attempt__c), NULL, NOW() - ringdna100__Last_Email_Attempt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Email Attempt (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Email_Attempt_Minutes__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Email_Attempt__c), NULL, (NOW() - ringdna100__Last_Email_Attempt__c) * 1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Email Attempt (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Message_Attempt_Days__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Outbound_Message__c), NULL, (NOW() - ringdna100__Last_Outbound_Message__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Message Attempt (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Message_Attempt_Minutes__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Outbound_Message__c), NULL, (NOW() - ringdna100__Last_Outbound_Message__c) * 1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Message Attempt (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_to_First_Dial_Minutes__c</fullName>
        <label>Time to First Dial (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_to_First_Response__c</fullName>
        <label>Time to First Response (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>